--- a/common/pom.xml
+++ b/common/pom.xml
@@ -30,6 +30,11 @@
             <version>1.2.58</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.2</version>
+        </dependency>
 
     </dependencies>
 
