--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,9 @@
         <module>common</module>
         <module>user</module>
         <module>resource</module>
-        <module>role</module>
         <module>order</module>
-        <module>product</module>
         <module>util</module>
+        <module>setting</module>
     </modules>
 
 
@@ -82,6 +81,20 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
+
+<!--        swagger-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.6.1</version>
         </dependency>
     </dependencies>
 
